JumpScript/tests/baselines/reference/unusedNamespaceInModule.errors.txt
tests/cases/compiler/unusedNamespaceInModule.jump(2,15): error TS6133: 'B' is declared but its value is never read.


==== tests/cases/compiler/unusedNamespaceInModule.jump (1 errors) ====
    module A {
        namespace B { }
                  ~
!!! error TS6133: 'B' is declared but its value is never read.
        export namespace C {}
    }